# formal-os

./: .gitignore  Cargo.toml  README.md  linker.ld  rust-toolchain.toml  x86_64-formal-os-local.json  x86_64-formal-os.json
.cargo/: config.toml
docs/: FEATURES.md  IPC.md  LOG_FORMAT.md
kernel/: Cargo.toml
kernel/src/: main.rs  panic.rs  types.rs
kernel/src/arch/: cpu.rs  gdt.rs  interrupts.rs  mod.rs  paging.rs  ring3.rs  virt_layout.rs
kernel/src/kernel/: entry.rs  ipc.rs  mod.rs  pagetable_init.rs  state_ref.rs  syscall.rs  trace.rs  user_program.rs
kernel/src/kernel/demo/: ipc_faults.rs  mem_faults.rs  mod.rs
kernel/src/logging/: mod.rs  serial.rs  vga.rs
kernel/src/mem/: addr.rs  address_space.rs  layout.rs  mod.rs  paging.rs
kernel/src/mm/: mod.rs  pagetable_init.rs
scripts/: build-kernel.sh  ci-check.sh  run-qemu-debug.sh  run-qemu.sh
