[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
spin = "0.9"
volatile = "0.2.6"
x86_64 = "0.15"
bitflags = { version = "2", default-features = false }

[features]
# デフォルトは「evil を一切入れない」＝通常動作
default = []

# --- 正規 feature（今後この3つだけ使う） ---
evil_double_map = []
evil_unmap_not_mapped = []
evil_ipc = []

# --- 互換 alias（古い呼び名が残ってても壊さない） ---
evil_mem_double_map = ["evil_double_map"]
