# kernel/Cargo.toml
[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
spin = "0.9"
volatile = "0.2.6"
x86_64 = "0.15"
bitflags = { version = "2", default-features = false }

[features]
# デフォルトは「evil を一切入れない」＝通常動作
default = []

# --- 正規 feature（今後この4つだけ使う） ---
evil_double_map = []
evil_unmap_not_mapped = []
evil_ipc = []
pf_demo = []

# --- IPC demo 専用（観測性・再現性のため） ---
# - slow send を 1 回に固定し、以後は recv_waiter が居る時だけ send する
# - Task1 の kick send を無効化してノイズを消す
ipc_demo_single_slow = []

# --- IPC 解析用（観測性を仕様にする） ---
# syscall 境界の最小トレース（IPC の入口・出口）
ipc_trace_syscall = []

# send が fast/slow のどちらで処理されたか等 “path” まで追う拡張トレース
# ipc_trace_syscall を内包して、paths を付けたら最低限の trace も必ず出るようにする
ipc_trace_paths = ["ipc_trace_syscall"]

# --- 互換 alias（古い呼び名が残ってても壊さない） ---
evil_mem_double_map = ["evil_double_map"]

# --- kill cleanup を検証するためのテスト用 ---
kill_cleanup_test = []

dead_partner_test = []

endpoint_close_test = []
