# kernel/Cargo.toml
[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
spin = "0.9"
volatile = "0.2.6"
x86_64 = "0.15"
bitflags = { version = "2", default-features = false }

[features]
# デフォルトは「evil を一切入れない」＝通常動作
default = []

# --- 正規 feature（今後この4つだけ使う） ---
evil_double_map = []
evil_unmap_not_mapped = []
evil_ipc = []
pf_demo = []

# --- IPC demo 専用（観測性・再現性のため） ---
ipc_demo_single_slow = []

# --- IPC 解析用（観測性を仕様にする） ---
ipc_trace_syscall = []
ipc_trace_paths = ["ipc_trace_syscall"]

# --- 互換 alias（古い呼び名が残ってても壊さない） ---
evil_mem_double_map = ["evil_double_map"]

# --- kill / IPC テスト用 ---
kill_cleanup_test = []
dead_partner_test = []
endpoint_close_test = []

# --- ring3 系（回帰テストと新経路の分離） ---
# ring3_demo:
# - “固定の検証ハーネス” (INT80_COUNT 1/2/3 回目でログが揃う)
# - mailbox_dispatch 経路は使わない（壊さない最優先）
ring3_demo = []

# ring3_mailbox:
# - ring3 に入り、int80 は “mailbox_dispatch 経路” を通す
# - ただしログはハーネス方式で確認できる（回帰しやすい）
ring3_mailbox = []
ring3_mailbox_loop = []
ring3_mailbox_loop_skip_rx = []
